--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
           <option value="student">Student</option>
           <option value="other">Other</option>
         </select>
+
+        <input type='text' id='other-title' name='user_title' placeholder='Your Job Role'>
       </fieldset>
 
       <fieldset class="shirt">
